Feat: add mobile styles
Pages: career, career item, press, press item, case item

--- a/src/career.pug
+++ b/src/career.pug
@@ -91,7 +91,7 @@ block content
 					p.section-vacancy__item-city
 						+svg("map-marker-small", true)(class="section-vacancy__item-city-marker")
 						| г.Москва
-					p.section-vacancy__item-salary.section-vacancy__item-salary--big По договоренности
+					p.section-vacancy__item-salary По договоренности
 				.section-vacancy__item-row
 					p.section-vacancy__item-title Менеджер по рекламациям
 					span.section-vacancy__item-button Подробнее
@@ -121,7 +121,7 @@ block content
 					p.section-vacancy__item-city
 						+svg("map-marker-small", true)(class="section-vacancy__item-city-marker")
 						| г.Москва
-						p.section-vacancy__item-salary 45 000 ₽
+					p.section-vacancy__item-salary 45 000 ₽
 				.section-vacancy__item-row
 					p.section-vacancy__item-title Менеджер по рекламациям
 					span.section-vacancy__item-button Подробнее
@@ -131,7 +131,7 @@ block content
 					p.section-vacancy__item-city
 						+svg("map-marker-small", true)(class="section-vacancy__item-city-marker")
 						| г.Москва
-						p.section-vacancy__item-salary 45 000 ₽
+					p.section-vacancy__item-salary 45 000 ₽
 				.section-vacancy__item-row
 					p.section-vacancy__item-title Менеджер по рекламациям
 					span.section-vacancy__item-button Подробнее
