--- a/src/case-list.pug
+++ b/src/case-list.pug
@@ -17,6 +17,7 @@ block content
 	section.section-case-list.container
 		.section-case-list__title-box
 			h2.h2.text-blue.section-case-list__title Наши кейсы
+			p.section-case-list__description.section-case-list__description--mobile Всего найдено: 145
 			.section-case-list__dropdown-row
 				.dropdown.dropdown--gray-border.dropdown--multi-select.section-case-list__dropdown
 					.dropdown__value-box
@@ -45,7 +46,7 @@ block content
 						li.dropdown__option(data-value="Услуга 1") Услуга 1
 						li.dropdown__option(data-value="Услуга 2") Услуга 2
 						li.dropdown__option(data-value="Услуга 3") Услуга 3
-		p.section-case-list__description Всего найдено: 145
+		p.section-case-list__description.section-case-list__description--desktop Всего найдено: 145
 		.section-case-list__grid
 			// Card
 			a.section-case-list__card.card.card--cases.card--with-tag-line(href="#")
@@ -122,4 +123,4 @@ block content
 				.card__bg-box
 					img.card__bg(src="images/section-cases/bg6.jpg", alt)
 		.section-case-list__button-row
-			button.button.button--blue-light.button--md.section-case-list__button Показать еще
+			button.button.button--outline-blue-light.button--md.section-case-list__button Показать еще
