--- a/src/page-list.pug
+++ b/src/page-list.pug
@@ -27,9 +27,9 @@ block content
 			li.list-arrow__elem
 				a(href="industry.html", target="_blank") Карточка индустрии
 			li.list-arrow__elem
-				a(href="case-list.html", target="_blank") Наши кейсы
+				a(href="case-list.html", target="_blank") Наши кейсы // + моб версия
 			li.list-arrow__elem
-				a(href="case-item.html", target="_blank") Карточка кейса
+				a(href="case-item.html", target="_blank") Карточка кейса// + моб версия
 			li.list-arrow__elem
 				a(href="service-list.html", target="_blank") Услуги
 			li.list-arrow__elem
@@ -37,11 +37,11 @@ block content
 			li.list-arrow__elem
 				a(href="press-list.html", target="_blank") Пресс-релизы
 			li.list-arrow__elem
-				a(href="press-item.html", target="_blank") Карточка пресс-релиза
+				a(href="press-item.html", target="_blank") Карточка пресс-релиза// + моб версия
 			li.list-arrow__elem
-				a(href="career.html", target="_blank") Карьера
+				a(href="career.html", target="_blank") Карьера // + моб версия
 			li.list-arrow__elem
-				a(href="career-item.html", target="_blank") Карточка вакансии
+				a(href="career-item.html", target="_blank") Карточка вакансии// + моб версия
 			li.list-arrow__elem
 				a(href="department.html", target="_blank") Отдел службы качества
 			li.list-arrow__elem
