--- a/src/pug/components/section-contacts.pug
+++ b/src/pug/components/section-contacts.pug
@@ -22,7 +22,7 @@ mixin sectionContacts(isCareer)
 									.section-contacts__textarea-box
 										textarea.form-control.form-control--textarea.section-contacts__form-textarea(name="message", placeholder="*Комментарий...")
 							if isCareer
-								.section-contacts__form-row
+								.section-contacts__form-row.section-contacts__form-row--button
 									.section-contacts__form-col.section-contacts__form-col--inputs
 										button.button.button--blue.button--lg.section-contacts__form-submit Отправить
 									.section-contacts__form-col.section-contacts__form-col--message
