--- a/src/scss/components/blocks/_dropdown.scss
+++ b/src/scss/components/blocks/_dropdown.scss
@@ -54,13 +54,22 @@
 		}
 
 		.dropdown--gray-border & {
-			padding-top: 25px;
-			padding-bottom: 25px;
+			padding-top: 20px;
+			padding-bottom: 20px;
+			background-color: #F2F6FA;
+
+			@media (min-width: $breakpoint-laptop) {
+				padding-top: 25px;
+				padding-bottom: 25px;}
 		}
 
 		.dropdown--multi-select & {
-			padding-top: 19px;
-			padding-bottom: 19px;
+			padding-top: 13px;
+			padding-bottom: 13px;
+
+			@media (min-width: $breakpoint-laptop) {
+				padding-top: 19px;
+				padding-bottom: 19px;}
 		}
 
 		.dropdown--logopark & {
