--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -12,6 +12,8 @@ header.header
 	// Top block
 	.header__row
 		.header__top-box.container
+			a.header__logo-link.header__logo-link--mobile(href="/")
+				img.header__logo-img(src="images/common/logo-major-terminal.svg", alt="Major Terminal")
 			ul.header__logo-list
 				li.header__logo-list-elem
 					a.header__logo-list-link(href="#", target="_blank", rel="noreferrer")
@@ -22,7 +24,9 @@ header.header
 			p.header__text
 				a.header__phone(href="tel:84957376006") 8 (495) 737 60 06
 				|
-				| — Секретариат
+				span.header__text-dash —
+				|
+				| Секретариат
 			button.header__search-button.js-search-toggle(aria-label="Поиск")
 				+svg("search-loupe")(class="header__search-button-icon")
 			.header__lang
@@ -38,8 +42,10 @@ header.header
 						li.dropdown__option(data-value="English")
 							img.dropdown__flag(src="images/common/flag-en.svg", alt)
 							| English
+			button.header__burger-btn(aria-label="Мобильное меню")
+				+svg("burger", true)(class="header__burger")
 	// Navigation
-	.header__row
+	.header__row.header__row--nav
 		.header__nav-box.container
 			a.header__logo-link(href="/")
 				img.header__logo-img(src="images/common/logo-major-terminal.svg", alt="Major Terminal")
