--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -23,3 +23,8 @@ $font-additional: 'Montserrat', sans-serif;
 
 // Transitions
 $transition-default: .2s ease;
+
+// Breakpoints
+$breakpoint-laptop: 992px;
+$breakpoint-desktop-xl: 1500px;
+$breakpoint-desktop: 1200px;
