--- a/src/scss/components/blocks/_header.scss
+++ b/src/scss/components/blocks/_header.scss
@@ -5,6 +5,14 @@
 
 	&__row {
 		border-bottom: 1px solid rgba(#3C3C3C26, .15);
+
+		&--nav {
+			display: none;
+
+			@media (min-width: $breakpoint-desktop) {
+				display: block;
+			}
+		}
 	}
 
 	&__top-box {
@@ -15,12 +23,16 @@
 	}
 
 	&__logo-list {
-		flex-shrink: 0;
-		display: flex;
-		align-items: center;
-		margin: 0 -11px;
-		list-style-type: none;
-		padding-left: 0;
+		display: none;
+
+		@media (min-width: $breakpoint-desktop) {
+			align-items: center;
+			margin: 0 -11px;
+			flex-shrink: 0;
+			display: flex;
+			list-style-type: none;
+			padding-left: 0;
+		}
 	}
 
 	&__logo-list-elem {
@@ -37,22 +49,43 @@
 
 	&__text {
 		flex-grow: 1;
-		margin: 0;
-		padding-left: 157px;
+		margin: 0 auto;
 		font-family: $font-additional;
-		font-size: 18px;
+		font-size: 14px;
 		line-height: 18px;
 		font-weight: 300;
 		text-align: center;
+
+		@media (min-width: $breakpoint-laptop) {
+			font-size: 18px;
+		}
+
+		@media (min-width: $breakpoint-desktop) {
+			margin: 0;
+			padding-left: 157px;
+		}
+	}
+
+	&__text-dash {
+		display: none;
+
+		@media (min-width: $breakpoint-desktop) {
+			display: inline;
+		}
 	}
 
 	&__phone {
+		display: block;
 		font-weight: 700;
 		color: inherit;
 		transition: color $transition-default;
 
 		&:hover {
 			color: $color-blue;
+		}
+
+		@media (min-width: $breakpoint-desktop) {
+			display: inline;
 		}
 	}
 
@@ -80,7 +113,7 @@
 	}
 
 	&__search-button {
-		display: flex;
+		display: none;
 		align-items: center;
 		padding: 0;
 		border: none;
@@ -95,6 +128,10 @@
 		&:hover {
 			color: $color-black;
 		}
+
+		@media (min-width: $breakpoint-desktop) {
+			display: flex;
+		}
 	}
 
 	&__search-button-icon {
@@ -105,8 +142,13 @@
 	}
 
 	&__lang {
+		display: none;
 		width: 138px;
 		padding-left: 24px;
+
+		@media (min-width: $breakpoint-desktop) {
+			display: block;
+		}
 	}
 
 	&__nav-box {
@@ -116,16 +158,38 @@
 
 	&__logo-link {
 		display: inline-block;
-		margin-top: 18px;
-		margin-right: 10px;
+
+		&--mobile {
+			@media (min-width: $breakpoint-desktop) {
+				display: none;
+			}
+		}
+
+		@media (min-width: $breakpoint-desktop) {
+			margin-top: 18px;
+			margin-right: 10px;
+		}
 	}
 
 	&__logo-img {
-		width: 82px;
+		width: 50px;
+
+		@media (min-width: $breakpoint-desktop) {
+			width: 82px;
+		}
 	}
 
 	&__nav {
-		margin: 0 auto;
+		display: none;
+
+		@media (min-width: $breakpoint-desktop) {
+			display: block;
+			margin: 0 auto;
+		}
+
+		@media (min-width: $breakpoint-desktop-xl) {
+			display: block;
+		}
 	}
 
 	&__nav-list {
@@ -137,6 +201,7 @@
 
 	&__nav-elem {
 		display: inline-block;
+
 		&--parent-with-short-list {
 			position: relative;
 		}
@@ -145,14 +210,14 @@
 	&__nav-link {
 		position: relative;
 		z-index: 10;
-		padding: 30px 16px;
+		padding: 0 6px;
 		display: inline-flex;
 		justify-content: center;
 		align-items: center;
 		height: 90px;
 		font-family: $font-secondary;
-		font-size: 22px;
-		line-height: 1px;
+		font-size: 18px;
+		line-height: 1;
 		font-weight: 700;
 		color: $color-blue;
 		transition: color $transition-default;
@@ -169,6 +234,16 @@
 			content: "";
 			transition: background-color $transition-default, transform $transition-default, opacity $transition-default;
 		}
+
+		@media (min-width: $breakpoint-desktop-xl) {
+			font-size: 22px;
+			padding: 0 12px;
+		}
+
+		@media (min-width: 1600px) {
+			padding: 0 16px;
+		}
+
 
 		.header__nav-elem:hover &,
 		&--active {
@@ -191,6 +266,7 @@
 		display: inline-flex;
 		align-items: center;
 		font-family: $font-secondary;
+		margin-left: auto;
 		padding: 12px 23px;
 		font-size: 22px;
 		line-height: 1;
@@ -203,6 +279,10 @@
 		&:hover {
 			color: $color-red;
 			border-color: $color-red;
+		}
+
+		@media (min-width: $breakpoint-desktop-xl) {
+			margin-left: 0;
 		}
 	}
 
@@ -218,10 +298,15 @@
 		top: 100%;
 		left: 0;
 		right: 0;
-		padding-top: 63px;
-		padding-bottom: 77px;
+		padding-top: 36px;
+		padding-bottom: 36px;
 		background-color: #fff;
 		box-shadow: 0 4px 30px rgba($color-blue-medium, .1);
+
+		@media (min-width: $breakpoint-desktop-xl) {
+			padding-top: 63px;
+			padding-bottom: 77px;
+		}
 
 		.header__nav-elem--parent:hover & {
 			display: block;
@@ -244,9 +329,13 @@
 		grid-template-rows: auto;
 		grid-gap: 21px 21px;
 		margin-top: 0;
-		margin-bottom: 66px;
+		margin-bottom: 36px;
 		padding: 0;
 		list-style-type: none;
+
+		@media (min-width: $breakpoint-desktop-xl) {
+			margin-bottom: 66px;
+		}
 
 		.header__nav-elem--parent-with-short-list & {
 			grid-template-columns: 1fr;
@@ -259,15 +348,16 @@
 		}
 	}
 
-	&__nav-child-elem {}
+	&__nav-child-elem {
+	}
 
 	&__nav-child-link {
 		position: relative;
 		z-index: 0;
 		overflow: hidden;
 		font-family: $font-secondary;
-		font-size: 24px;
-		line-height: 32px;
+		font-size: 16px;
+		line-height: 24px;
 		font-weight: 700;
 		color: $color-blue-medium;
 		transition: color $transition-default;
@@ -276,13 +366,18 @@
 			color: $color-red;
 		}
 
-		.header__nav-elem--parent-with-blocks &  {
+		@media (min-width: $breakpoint-desktop-xl) {
+			font-size: 24px;
+			line-height: 32px;
+		}
+
+		.header__nav-elem--parent-with-blocks & {
 			display: block;
 			font-family: $font-additional;
-			font-size: 32px;
-			line-height: 32px;
+			font-size: 16px;
+			line-height: 24px;
 			font-weight: 900;
-			padding: 44px 47px;
+			padding: 24px;
 			border-radius: 25px;
 			background-color: $color-blue;
 			color: $color-white;
@@ -290,6 +385,12 @@
 
 			&:hover {
 				background-color: darken($color-blue, 10%);
+			}
+
+			@media (min-width: $breakpoint-desktop-xl) {
+				padding: 44px 47px;
+				font-size: 32px;
+				line-height: 32px;
 			}
 		}
 	}
@@ -311,5 +412,26 @@
 		.header__nav-child-link:hover & {
 			opacity: 0;
 		}
+	}
+
+	&__burger-btn {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 48px;
+		height: 48px;
+		padding: 0;
+		border: none;
+		background-color: $color-transparent;
+		color: $color-blue;
+
+		@media (min-width: $breakpoint-desktop) {
+			display: none;
+		}
+	}
+
+	&__burger {
+		width: 24px;
+		height: 24px;
 	}
 }
