--- a/src/scss/components/blocks/_news-card.scss
+++ b/src/scss/components/blocks/_news-card.scss
@@ -74,6 +74,7 @@
 		.news-card--small & {
 			max-height: 160px;
 		}
+
 		.news-card--radius-small & {
 			border-radius: 10px;
 		}
@@ -100,6 +101,10 @@
 
 		.news-card--small & {
 			max-width: calc(100% - 40px);
+
+			@media (max-width: $breakpoint-laptop) {
+				padding-top: 19px;
+			}
 		}
 
 		.news-card--small:hover & {
@@ -120,13 +125,21 @@
 	&__title {
 		font-family: $font-secondary2;
 		margin: 0;
-		font-size: 28px;
+		font-size: 18px;
 		line-height: 1;
 		font-weight: 500;
+
+		@media (min-width: $breakpoint-laptop) {
+			font-size: 28px;
+		}
 
 		.news-card--big & {
 			font-size: 32px;
 			line-height: 32px;
+
+			@media (min-width: $breakpoint-laptop) {
+				font-size: 32px;
+			}
 		}
 	}
 }
