--- a/src/scss/components/sections/_section-contacts.scss
+++ b/src/scss/components/sections/_section-contacts.scss
@@ -1,23 +1,37 @@
 .section-contacts {
 	position: relative;
 	z-index: 0;
-	padding-top: 116px;
-	padding-bottom: 64px;
+	padding-top: 40px;
+	padding-bottom: 57px;
 	background-color: $color-blue-light3;
 	overflow: hidden;
 
+	@media (min-width: $breakpoint-laptop) {
+		padding-top: 116px;
+		padding-bottom: 64px;
+	}
+
 	&__row {
-		display: grid;
-		grid-template-columns: 1.55fr 1fr;
-		grid-template-rows: auto;
-		grid-column-gap: 90px;
+		display: block;
+
+		@media (min-width: $breakpoint-desktop-xl) {
+			display: grid;
+			grid-template-columns: 1.55fr 1fr;
+			grid-column-gap: 90px;
+		}
 	}
 
 	&__form-box {
 		position: relative;
 	}
 
-	&__img-box {}
+	&__img-box {
+		display: none;
+
+		@media (min-width: $breakpoint-desktop-xl) {
+			display: block;
+		}
+	}
 
 	&__img {
 		width: 100%;
@@ -25,8 +39,14 @@
 
 	&__title {
 		margin-top: 0;
-		margin-bottom: 71px;
+		margin-bottom: 48px;
 		color: $color-blue;
+
+		@media (max-width: $breakpoint-laptop) {
+			margin-bottom: 71px;
+			font-size: 32px;
+			line-height: 32px;
+		}
 
 		.section-contacts--job & {
 			display: flex;
@@ -52,21 +72,37 @@
 	}
 
 	&__form-row {
-		display: flex;
-		margin: 0 -16px 35px;
+		@media (min-width: $breakpoint-laptop) {
+			display: flex;
+			margin: 0 -16px 35px;
+		}
 
 		.section-contacts--job & {
 			margin-bottom: 63px;
 			transform: none;
 		}
+
+		&--button {
+			@media (max-width: $breakpoint-laptop) {
+				display: flex;
+				flex-direction: column-reverse;
+			}
+		}
 	}
 
 	&__form-col {
 		width: 100%;
-		padding: 0 16px;
+
+		@media (min-width: $breakpoint-laptop) {
+			padding: 0 16px;
+		}
 
 		&--inputs {
-			max-width: 43%;
+			max-width: 100%;
+
+			@media (min-width: $breakpoint-laptop) {
+				max-width: 43%;
+			}
 
 			.section-contacts--job & {
 				max-width: 46%;
@@ -74,7 +110,11 @@
 		}
 
 		&--message {
-			max-width: 57%;
+			max-width: 100%;
+
+			@media (min-width: $breakpoint-laptop) {
+				max-width: 57%;
+			}
 
 			.section-contacts--job & {
 				max-width: 54%;
@@ -91,6 +131,13 @@
 		display: block;
 		width: 100%;
 		height: 100%;
+		min-height: 139px;
+		margin: 23px 0;
+
+		@media (min-width: $breakpoint-laptop) {
+			margin: 0;
+			min-height: auto;
+		}
 	}
 
 	&__input-box {
@@ -113,7 +160,10 @@
 
 	&__form-submit {
 		width: 100%;
-		max-width: 255px;
+
+		@media (min-width: $breakpoint-laptop) {
+			max-width: 255px;
+		}
 	}
 
 	&__call-text {
@@ -135,7 +185,7 @@
 
 	&__form-upload-text {
 		margin-top: 0;
-		margin-bottom: 36px;
+		margin-bottom: 25px;
 		font-size: 18px;
 		line-height: 18px;
 		font-weight: 700;
@@ -147,16 +197,26 @@
 	}
 
 	&__form-upload-label {
-		margin: 0;
-		padding: 12px 32px;
+		display: block;
+		margin: 0 0 27px;
+		padding: 20px 32px;
 		border: 1px dashed $color-blue;
 		border-radius: 40px;
-		font-family: $font-additional;
-		font-size: 18px;
+		font-family: $font-secondary;
+		font-size: 21px;
 		line-height: 18px;
 		font-weight: 700;
 		color: $color-blue;
+		text-align: center;
 		cursor: pointer;
+
+		@media (min-width: $breakpoint-laptop) {
+			display: inline-block;
+			margin: 0;
+			font-family: $font-additional;
+			padding: 12px 32px;
+			font-size: 18px;
+		}
 	}
 
 	&__form-layer {
@@ -177,6 +237,10 @@
 			opacity: 0;
 			visibility: hidden;
 
+			@media (max-width: $breakpoint-laptop) {
+				text-align: center;
+			}
+
 			.section-contacts__form--submitted & {
 				visibility: visible;
 				opacity: 1;
@@ -188,7 +252,11 @@
 		display: block;
 		width: 100px;
 		height: 100px;
-		margin-bottom: 45px;
+		margin: 0 auto 45px;
+
+		@media (min-width: $breakpoint-laptop) {
+			margin: 0 0 45px;
+		}
 	}
 
 	&__submitted-title {
