--- a/src/scss/components/sections/_section-hero.scss
+++ b/src/scss/components/sections/_section-hero.scss
@@ -14,8 +14,13 @@
 	}
 
 	&--case {
-		margin-top: 10px;
-		margin-bottom: 58px;
+		margin-top: 28px;
+		margin-bottom: 18px;
+
+		@media (min-width: $breakpoint-laptop) {
+			margin-top: 10px;
+			margin-bottom: 58px;
+		}
 	}
 
 	&--simple {
@@ -29,10 +34,18 @@
 
 	&__content {
 		position: relative;
-		padding: 67px 56px 53px 34px;
+		padding: 39px 20px 47px;
+
+		@media (min-width: $breakpoint-laptop) {
+			padding: 67px 56px 53px 34px;
+		}
 
 		.section-hero--industry & {
 			padding: 67px 55px 27px;
+
+			@media (min-width: $breakpoint-laptop) {
+				padding: 67px 55px 27px;
+			}
 		}
 
 		.section-hero--simple & {
@@ -40,6 +53,10 @@
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
+
+			@media (min-width: $breakpoint-laptop) {
+				padding: 32px 78px 32px 51px;
+			}
 		}
 	}
 
@@ -67,10 +84,15 @@
 
 		.section-hero--career & {
 			font-family: $font-secondary;
-			font-size: 72px;
-			line-height: 72px;
+			font-size: 32px;
+			line-height: 32px;
 			font-weight: 700;
 			margin-bottom: 0;
+
+			@media (min-width: $breakpoint-laptop) {
+				font-size: 72px;
+				line-height: 72px;
+			}
 		}
 
 		.section-hero--department & {
@@ -82,10 +104,20 @@
 
 		.section-hero--case & {
 			font-family: $font-secondary;
-			font-size: 72px;
-			line-height: 72px;
+			font-size: 32px;
+			line-height: 32px;
 			font-weight: 700;
 			margin-bottom: 27px;
+
+			@media (min-width: $breakpoint-laptop) {
+				font-size: 48px;
+				line-height: 54px;
+			}
+
+			@media (min-width: $breakpoint-desktop) {
+				font-size: 72px;
+				line-height: 72px;
+			}
 		}
 
 		.section-hero--industry & {
@@ -109,19 +141,29 @@
 		}
 
 		.section-hero--career & {
-			margin-bottom: 54px;
+			margin-bottom: 32px;
 			font-family: $font-secondary2;
 			font-weight: 500;
-			font-size: 24px;
+			font-size: 18px;
 			line-height: 24px;
+
+			@media (min-width: $breakpoint-laptop) {
+				margin-bottom: 54px;
+				font-size: 24px;
+			}
 		}
 
 		.section-hero--case & {
 			margin-top: 0;
-			margin-bottom: 38px;
+			margin-bottom: 0;
 			font-family: $font-secondary;
-			font-size: 24px;
+			font-size: 18px;
 			line-height: 24px;
+
+			@media (min-width: $breakpoint-laptop) {
+				font-size: 24px;
+				margin-bottom: 38px;
+			}
 		}
 
 		.section-hero--department & {
@@ -142,16 +184,30 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		margin-bottom: 47px;
+		margin-bottom: 20px;
+
+		@media (min-width: $breakpoint-laptop) {
+			margin-bottom: 47px;
+		}
 	}
 
 	&__title-img {
+		display: none;
+
+		@media (min-width: $breakpoint-laptop) {
+			display: inline-block;
+		}
 	}
 
 	&__call-text {
-		font-size: 24px;
+		margin: 0;
+		font-size: 18px;
 		line-height: 32px;
 		font-weight: 700;
+
+		@media (min-width: $breakpoint-laptop) {
+			font-size: 24px;
+		}
 	}
 
 	&__call-link {
@@ -164,14 +220,20 @@
 	}
 
 	&__job-search-row {
-		display: flex;
-		justify-content: space-between;
+		@media (min-width: 1600px) {
+			display: flex;
+			justify-content: space-between;
+		}
 	}
 
 	&__job-search {
 		width: 100%;
-		max-width: 980px;
-		margin-right: 30px;
+		margin-bottom: 30px;
+
+		@media (min-width: 1600px) {
+			max-width: 980px;
+			margin-right: 30px;
+		}
 	}
 
 	&__slogan {
